--- a/templates/upload.html
+++ b/templates/upload.html
@@ -72,7 +72,7 @@
       <input type="file" name="excel_file" id="excel_file" required>
 
       <label for="username">Windows Username:</label>
-      <input type="text" name="username" id="username" placeholder="e.g. prashant.jadhav" required>
+      <input type="text" name="YourUsername" id="YourUsername" placeholder="e.g. prashant.jadhav" required>
 
       <button type="submit">Upload</button>
     </form>
